# CallChain

./: .gitignore  README.md  demo.ipynb  example_usage.py  main.py  pyproject.toml  requirements.txt  setup.cfg
CallChain/: __init__.py
CallChain/audio/: __init__.py  clients.py  config.py  processor.py  transcribe.py
CallChain/core/: __init__.py  core.py
CallChain/models/: __init__.py  base.py  groq.py  openai.py
tests/: test_core.py  test_refactor.py  test_transcribe.py
