[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CallChain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=0.36.0",
    "librosa>=0.11.0",
    "load-dotenv>=0.1.0",
    "noisereduce>=3.0.3",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "pytest>=9.0.1",
    "soundfile>=0.13.1",
]
